--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-color": "^2.19.3",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.2",
